dados-service/src/main/kubernetes/dados-service-srv.yml
apiVersion: v1 # Usa apps/v1beta2 para versiones anteriores a 1.9.0
kind: Service
metadata:
  name: dados-service
  labels:
    app: dados-service
spec:
  ports:
   - name: http
     protocol: TCP
     port: 8888
     targetPort: 8080
  selector:
     app: dados-service
