dados-service/src/main/kubernetes/dados-service-ingress.yml
apiVersion:      networking.k8s.io/v1beta1
kind:            Ingress
metadata:
  name:          dados-service-ingress
spec:
  rules:
  - http:
      paths:
      - path: /dados-service
        backend:
          serviceName: dados-service-srv
          servicePort: 80
